    - make commands more fail-save
    - make world gen more fail-save
    - add ores
    - add mcpi API support
    - an logging update
    - improve item texture atlas system (it seems not very stable when adding new items without rebuilding)
    - tool level system based on an enum-list-like system were every block defines an Enum-entry for minimum
    - rendering helper class for setting up things like 3d rendering, alpha usage, ...
    - add an line into logging where the system searches for the location where the error occur and will link the mod
        caused it into the log
    - parser for the new mc dimension config format
    - mdk kit with setup and launcher binding
    - add an mode where the window opens only when the load is complete
    - add an "show"-mode where the user is forced into one single world loading immediate when entering the game
        and when the user tries to go back to start menu, the game is closing. [change button text for that]
    - add TranslationComponent-class supported by buttons, labels, ... to dynamic cache the translation
    - implement glsl language adapter (see https://www.pythonstuff.org/glsl/example_2_glsl_with_pyglet.html)
    - implement lighting

information on development:
    - the development is split up into 3 phases: the dev-branch with changes to the code, snapshots pushed to release,
        but not published as releases on github, and the final releases pushed to release-branch and published as#
        an release
    - developing happens also on feature branches were bigger features can be tested. It is not guaranteed that any
        if this features will make its way into the final release.
    - PR's should target master or in some cases the feature branches, only for critical bug fixes the release-branch
    - this file will keep track on every development leading into an snapshot or release. The dev-branch will be used