@@ -33,17 +33,19 @@ class StateWorldLoading(State.State):
     def get_parts(self) -> list:
         return [mcpython.state.StatePartConfigBackground.StatePartConfigBackground(),
                 mcpython.state.ui.UIPartLable.UIPartLable("0%", (0, 50), anchor_lable="MM", anchor_window="MD",
-                                                 color=(255, 255, 255, 255))]
+                                                          color=(255, 255, 255, 255)),
+                mcpython.state.ui.UIPartLable.UIPartLable("(0/0/0)", (0, 30), anchor_lable="MM", anchor_window="MD",
+                                                          color=(255, 255, 255, 255))]
 
     def on_update(self, dt):
         G.worldgenerationhandler.task_handler.process_tasks(timer=0.8)
         for chunk in self.status_table:
             c = G.worldgenerationhandler.task_handler.get_task_count_for_chunk(
                 G.world.get_active_dimension().get_chunk(*chunk))
-            self.status_table[chunk] = 1/c if c > 0 else -1
+            self.status_table[chunk] = 1 / c if c > 0 else -1
         if len(G.worldgenerationhandler.task_handler.chunks) == 0:
             G.statehandler.switch_to("minecraft:game")
-        self.parts[1].text = "{}%".format(round(sum(self.status_table.values())/len(self.status_table)*1000)/10)
+        self.parts[1].text = "{}%".format(round(sum(self.status_table.values()) / len(self.status_table) * 1000) / 10)
 
     def on_activate(self):
         G.worldgenerationhandler.enable_generation = False
@@ -90,14 +92,19 @@ class StateWorldLoading(State.State):
             G.tickhandler.schedule_once(G.world.cleanup)
             logger.println("interrupted world loading by user")
 
+    def calculate_percentage_of_progress(self):
+        k = list(self.status_table.values())
+        return k.count(-1) / len(k)
+
     def on_draw_2d_post(self):
         wx, wy = G.window.get_size()
         mx, my = wx // 2, wy // 2
         if len(self.status_table) == 0:
             self.parts[1].text = "0%"
+            self.parts[2].text = "0/0/0"
         else:
-            self.parts[1].text = "{}%".format(
-                round(list(self.status_table.values()).count(1)/len(self.status_table)*1000)/10)
+            self.parts[1].text = "{}%".format(round(self.calculate_percentage_of_progress() * 1000) / 10)
+            self.parts[2].text = "{}/{}/{}".format(*G.worldgenerationhandler.task_handler.get_total_task_stats())
 
         for cx, cz in self.status_table:
             status = self.status_table[(cx, cz)]
@@ -108,7 +115,7 @@ class StateWorldLoading(State.State):
                 color = (0, 255, 0)
             else:
                 color = (136, 0, 255)
-            mcpython.util.opengl.draw_rectangle((mx+cx*10, my+cz*10), (10, 10), color)
+            mcpython.util.opengl.draw_rectangle((mx + cx * 10, my + cz * 10), (10, 10), color)
 
 
 worldloading = None
@@ -120,4 +127,3 @@ def create():
 
 
 mcpython.mod.ModMcpython.mcpython.eventbus.subscribe("stage:states", create)
-
