@@ -1134,3 +1134,4 @@ sstarted these clone on 12th of July, 2019
 [uuk]: added state part serializer for progress bar
 [uuk]: implemented new data fixer system
 [uuk]: new storage version: 6
+[uuk]: improved generating & loading world screen, fixing bug 202
